# selenium-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.gitea/workflows/: build.yml
.github/workflows/: release.yml
scripts/: start-local.sh
src/selenium_mcp/: __init__.py  __main__.py  config.py  server.py
src/selenium_mcp/core/: __init__.py  driver_factory.py  exceptions.py  session_manager.py
src/selenium_mcp/tools/: __init__.py  actions.py  meta.py  navigation.py  observation.py  scripting.py  session.py  waits.py
src/selenium_mcp/utils/: __init__.py  dom_helpers.py  element_resolver.py  error_mapper.py  guardrails.py
tests/: __init__.py  conftest.py  test_actions.py  test_dom_helpers.py  test_error_mapper.py  test_navigation.py  test_recording.py  test_session_manager.py
tests/integration/: __init__.py  conftest.py  test_grid_connectivity.py  test_mcp_tools.py
